[Fix #83] Implement service layer for fetching ManagedEntity and FaultTreeSummary properties. - add ComplexManagedEntityRepositoryService encapsulating common functionality for complex artifacts such as fault trees and systems. - fix bug not being able to update fault tree name